--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -89,7 +89,7 @@
         <div class="right-side">
             <div class="pizza-specials-section">
                 <div class="orange-box">
-                    <h2>SPECIAL PIZZAS (Large or Individual) <span class="translation">(Pizzas especiales: grandes o individuales)</span></h2>
+                    <h2>SPECIAL PIZZAS (Large or Individual) </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Mozzarella <span class="translation">(Mozzarella)</span></li>
                         <li>Onion <span class="translation">(Cebolla)</span></li>
@@ -106,7 +106,7 @@
 
             <div class="pizza-customize-section">
                 <div class="orange-box">
-                    <h2>ADD YOUR FAVORITE EXTRA TOPPINGS <span class="translation">(Añade tus ingredientes favoritos)</span></h2>
+                    <h2>ADD YOUR FAVORITE EXTRA TOPPINGS </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Egg <span class="translation">(Huevo)</span></li>
                         <li>Tomato <span class="translation">(Tomate)</span></li>
