--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -78,18 +78,18 @@
             <div class="masa">
                 <div class="masa-option">
                     <img src="images/piedra.jpg" alt="Тесто на камне">
-                    <h3>КАМЕННАЯ ОСНОВА (Тонкая и Хрустящая) <span class="translation">(Пьедра)</span></h3>
+                    <h3>КАМЕННАЯ ОСНОВА (Тонкая и Хрустящая) <span class="translation">(PIEDRA)</span></h3>
                 </div>
                 <div class="masa-option">
                     <img src="images/molde.jpg" alt="Толстое тесто">
-                    <h3>ТОЛСТАЯ ОСНОВА (Сыра больше) <span class="translation">(Мольде)</span></h3>
+                    <h3>ТОЛСТАЯ ОСНОВА (Сыра больше) <span class="translation">(MOLDE)</span></h3>
                 </div>
             </div>
         </div>
         <div class="right-side">
             <div class="pizza-specials-section">
                 <div class="orange-box">
-                    <h2>ОСОБЫЕ ПИЦЦЫ (Большие или индивидуальные) <span class="translation">(Специальные пиццы: большие или индивидуальные)</span></h2>
+                    <h2>ОСОБЫЕ ПИЦЦЫ (Большие или индивидуальные) </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Моцарелла <span class="translation">(Mozzarella)</span></li>
                         <li>Лук <span class="translation">(Cebolla)</span></li>
@@ -106,7 +106,7 @@
 
             <div class="pizza-customize-section">
                 <div class="orange-box">
-                    <h2>ДОБАВЬТЕ СВОИ ЛЮБИМЫЕ ИНГРЕДИЕНТЫ <span class="translation">(Добавьте свои любимые ингредиенты)</span></h2>
+                    <h2>ДОБАВЬТЕ СВОИ ЛЮБИМЫЕ ИНГРЕДИЕНТЫ </h2>
                     <ul class="no-bullets" style="font-size: 25px;">
                         <li>Яйцо <span class="translation">(Huevo)</span></li>
                         <li>Томат <span class="translation">(Tomate)</span></li>
