--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -66,6 +66,9 @@
                     <img src="images/molde.jpg" alt="Masa al Molde">
                     <h3>AL MOLDE (Masa gruesa y con MAS queso)</h3>
                 </div>
+                <div class="masa-option">
+                    <img src="images/toppings.jpg">
+                </div>
             </div>
         </div>
         <div class="right-side">
