--- a/menu-ingles.html
+++ b/menu-ingles.html
@@ -84,6 +84,9 @@
                     <img src="images/molde.jpg" alt="Pan-Baked Crust">
                     <h3>HIGH BASE (Thick Base and Extra Cheese) <span class="translation">(Molde)</span></h3>
                 </div>
+                <div class="masa-option">
+                    <img src="images/toppings.jpg">
+                </div>
             </div>
         </div>
         <div class="right-side">
