--- a/menu-ruso.html
+++ b/menu-ruso.html
@@ -84,6 +84,9 @@
                     <img src="images/molde.jpg" alt="Толстое тесто">
                     <h3>ТОЛСТАЯ ОСНОВА (Сыра больше) <span class="translation">(MOLDE)</span></h3>
                 </div>
+                <div class="masa-option">
+                    <img src="images/toppings.jpg">
+                </div>
             </div>
         </div>
         <div class="right-side">
