--- a/menu-portugues.html
+++ b/menu-portugues.html
@@ -84,6 +84,9 @@
                     <img src="images/molde.jpg" alt="Massa Alta">
                     <h3>BASE ALTA (Espessa e com Queijo Extra) <span class="translation">(Molde)</span></h3>
                 </div>
+                <div class="masa-option">
+                    <img src="images/toppings.jpg">
+                </div>
             </div>
         </div>
         <div class="right-side">
@@ -170,7 +173,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Serviços Madeirense | Todos os direitos reservados</p>
+        <p>&copy; 2024 Servicios Madeirense | Todos os direitos reservados</p>
     </footer>
 </body>
 </html>
