--- a/index.html
+++ b/index.html
@@ -5,20 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Pizza</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        .fullscreen-button {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            padding: 10px 20px;
-            background-color: #f39c12;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 1000;
-        }
-    </style>
 </head>
 <body>
     <div class="main-container">
@@ -29,28 +15,34 @@
 
         <!-- Contenedor de botones -->
         <div class="button-container">
-            <button class="promo-button" onclick="window.location.href='promociones.html'">PROMOCIONES</button>
-            <button class="menu-button" onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
-            <button class="menu-button" onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
-            <button class="menu-button" onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
-            <button class="menu-button" onclick="window.location.href='menu-ruso.html'">МЕНЮ НА РУССКОМ</button>
+            <button class="promo-button" onclick="openFullscreen('promociones.html')">PROMOCIONES</button>
+            <button class="menu-button" onclick="openFullscreen('menu-espanol.html')">MENÚ EN ESPAÑOL</button>
+            <button class="menu-button" onclick="openFullscreen('menu-portugues.html')">MENÚ EM PORTUGUÊS</button>
+            <button class="menu-button" onclick="openFullscreen('menu-ingles.html')">MENU IN ENGLISH</button>
+            <button class="menu-button" onclick="openFullscreen('menu-ruso.html')">МЕНЮ НА РУССКОМ</button>
         </div>
     </div>
 
-    <!-- Botón de pantalla completa -->
-    <button class="fullscreen-button" onclick="toggleFullscreen()">Pantalla Completa</button>
-
     <script>
-        function toggleFullscreen() {
-            const doc = document.documentElement;
-            if (!document.fullscreenElement) {
-                doc.requestFullscreen().catch(err => {
-                    console.error(`Error attempting to enable fullscreen mode: ${err.message}`);
-                });
-            } else {
-                document.exitFullscreen();
-            }
+        // Función para abrir en pantalla completa
+        function openFullscreen(pageUrl) {
+            localStorage.setItem('fullscreen', 'true'); // Guardar estado de pantalla completa
+            window.location.href = pageUrl;
         }
+
+        // Al cargar la página, verificar si debe estar en pantalla completa
+        document.addEventListener("DOMContentLoaded", () => {
+            if (localStorage.getItem('fullscreen') === 'true') {
+                const elem = document.documentElement; // Elemento raíz
+                if (elem.requestFullscreen) {
+                    elem.requestFullscreen();
+                } else if (elem.webkitRequestFullscreen) { // Para Safari
+                    elem.webkitRequestFullscreen();
+                } else if (elem.msRequestFullscreen) { // Para IE/Edge
+                    elem.msRequestFullscreen();
+                }
+            }
+        });
     </script>
 </body>
 </html>
